[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Buildings/MoveableBuilding.gd" type="Script" id=1]
[ext_resource path="res://Assets/Materials/HoverIcon.tres" type="Material" id=2]

[sub_resource type="PlaneMesh" id=4]

[node name="MoveableBuilding" type="Spatial"]
script = ExtResource( 1 )

[node name="Edge" type="Spatial" parent="."]

[node name="Graphics" type="Spatial" parent="Edge"]

[node name="Sensor" type="Area" parent="Edge"]
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Edge/Sensor"]

[node name="HoverIcon" type="MeshInstance" parent="Edge"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0 )
visible = false
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )
[connection signal="input_event" from="Edge/Sensor" to="." method="_on_Sensor_input_event"]
